<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="4dp"
        app:cardElevation="4dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:padding="8dp">

            <ImageView
                android:id="@+id/poster1"
                android:layout_width="120dp"
                android:layout_height="160dp"
                android:layout_marginBottom="4dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_default_bg" />

            <TextView
                android:id="@+id/judul1"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@id/poster1"
                android:layout_toRightOf="@id/poster1"
                android:text="@string/movie_name"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/deskripsi1"
                android:layout_width="match_parent"
                android:layout_height="75dp"
                android:layout_below="@id/judul1"
                android:layout_marginStart="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="0dp"
                android:layout_marginRight="8dp"
                android:layout_marginBottom="8dp"
                android:layout_toEndOf="@id/poster1"
                android:layout_toRightOf="@id/poster1"
                android:maxLength="150"
                android:text="@string/movie_description" />

            <Button
                android:id="@+id/btnSelect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/judul1"
                android:layout_alignLeft="@+id/judul1"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginBottom="5dp"
                android:text="@string/btn_select" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</LinearLayout>